@@ -1,5 +1,10 @@
 2004-05-26  Sam Steingold  <sds@gnu.org>
 
+	* pathname.d (MAKE-LOGICAL-PATHNAME): accept :DEVICE :UNSPECIFIC
+	because PATHNAME-DEVICE for LOGICAL-PATHNAME returns :UNSPECIFIC
+
+2004-05-26  Sam Steingold  <sds@gnu.org>
+
 	* Makefile.devel (src--distrib): touch src/VERSION to avoid the
 	common problem of autoconf calls on user machine
 
